--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI fantastic form</title>
+    <title>Fantastic UI form</title>
     <link rel="stylesheet" href="styles.css"></head>
     <link rel="stylesheet" href="style2.css"></head>
 <body>
