--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="switch__icon-part switch__icon-part--1b"></span>
                 </span>
             </span>
-            <span class="switch__label">Dark Mode</span>
+            <span class="switch__label">The Dark Mode</span>
         </label>
 
         <!--  -->
