--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="switch__label">The Dark Mode</span>
         </label>
 
-        <!--  -->
+        <!-- END SWITCH LIGHT AND DARK -->
 
     <form id="idea" class="idea-form" action="">
         <svg class="idea-form__icon" viewBox="0 0 32 32" width="32px" height="32px" aria-hidden="true">
