--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 <rect x="13" y="28" width="6" height="2"/>
             </g>
         </svg>
-        <button class="idea-form__btn idea-form__btn--start" type="button" data-toggle>J'ai une idée</button>
+        <button class="idea-form__btn idea-form__btn--start" type="button" data-toggle>J'ai une excellente idée</button>
         <div class="idea-form__fill"></div>
         <div class="idea-form__content">
             <label for="my-idea" class="idea-form__label">Idea</label>
             <textarea id="my-idea" class="idea-form__textarea" placeholder="My idea is…"></textarea>
-            <button class="idea-form__btn" type="submit" disabled>Envoyer</button>
+            <button class="idea-form__btn" type="submit" disabled>J'envoie</button>
         </div>
     </form>
     <script src="script.js"></script>
