update page and delimited each part

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
         <!-- END SWITCH LIGHT AND DARK -->
 
+        <!-- FORM -->
+
     <form id="idea" class="idea-form" action="">
         <svg class="idea-form__icon" viewBox="0 0 32 32" width="32px" height="32px" aria-hidden="true">
             <g fill="currentcolor">
@@ -52,9 +54,12 @@
         <div class="idea-form__content">
             <label for="my-idea" class="idea-form__label">Idea</label>
             <textarea id="my-idea" class="idea-form__textarea" placeholder="My idea is…"></textarea>
-            <button class="idea-form__btn" type="submit" disabled>J'envoie</button>
+            <button class="idea-form__btn" type="submit" disabled>Send idea</button>
         </div>
     </form>
+
+    <!-- END FORM -->
+    
     <script src="script.js"></script>
 </body>
 </html>
