--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="switch__label">The Dark Mode</span>
         </label>
 
-        <!-- END SWITCH LIGHT AND DARK -->
+        <!-- END SWITCH LIGHT AND DARK PART-->
 
         <!-- FORM -->
 
