update contnetn on the ui page

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <rect x="13" y="28" width="6" height="2"/>
             </g>
         </svg>
-        <button class="idea-form__btn idea-form__btn--start" type="button" data-toggle>J'ai une excellente idée</button>
+        <button class="idea-form__btn idea-form__btn--start" type="button" data-toggle>J'ai une excellente idée !</button>
         <div class="idea-form__fill"></div>
         <div class="idea-form__content">
             <label for="my-idea" class="idea-form__label">Idea</label>
             <textarea id="my-idea" class="idea-form__textarea" placeholder="My idea is…"></textarea>
-            <button class="idea-form__btn" type="submit" disabled>Send idea</button>
+            <button class="idea-form__btn" type="submit" disabled>Send an idea</button>
         </div>
     </form>
 
